--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start:api": "json-server --watch src/models/db.json --port=3002",
+    "start:api": "json-server --watch src/models/db.json --port=3002 --delay=500",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
